# teide-bench

./: .gitignore  Makefile  README.md  bench.py  bench_all.py  engine_utils.py  pyproject.toml  sort_bench_multi.py  sort_bench_plot.py  sort_data_viz.py
python/: groupby.py  interactive.py  join.py  sort.py  window.py
python/duckdb/: groupby.py  join.py  sort.py  window.py
sql/: create_parted.py
