[project]
name = "teide-bench"
version = "0.1.0"
description = "H2O.ai benchmark: Teide vs DuckDB vs Polars"
requires-python = ">=3.9"
dependencies = [
    "duckdb",
    "polars",
]

[project.optional-dependencies]
teide = ["teide"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
